Fix: button has full width on mobile (#232)
* feat: button has full width on mobile

* feat: make mobile full width optional

--- a/src/styles/includes/_button.scss
+++ b/src/styles/includes/_button.scss
@@ -8,6 +8,13 @@
 	display: inline-flex;
 	align-items: center;
 
+	&--mobile-full-width {
+		@include bp-xs() {
+			width: 100%;
+			justify-content: center;
+		}
+	}
+
 	&__icon {
 		fill: none;
 		width: 1.6rem;
